<?xml version="1.0"?>
<package format="2">
  <name>mjpeg_cam_publisher</name>
  <version>0.0.1</version>
  <description>MJPEG camera stream publisher</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
</package>
